# polars-server

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: app.py  conf.yaml  config.py
