[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Chitral Verma <chitralverma@gmail.com>"]
description = "Query datasets remotely using Polars as execution engine."
license = "Apache License, Version 2.0"
name = "polars-server"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
deltalake = "0.9.0"
fastapi = "^0.95.1"
numpy = "^1.24"
polars = "^0.17.13"
pyarrow = "^12.0.0"
python = ">=3.8,<4.0"
robyn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pre-commit = "2.21.0"
pytest = "^7.3.1"
ruff = "^0.0.267"
